--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.26.0"
+    "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^6.26.0",
+    "react-slideshow-image": "^4.3.1",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
